# server/app.js
@@ -41,10 +41,12 @@ app.use(express.json()); //repalcement of bodyparser
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 require("./app/middleware/HandleResponses")(app); //to handle responses
 require("./app/routes/auth.routes")(app);
+require("./app/routes/notification.routes")(app);
 require("./app/routes/user.routes")(app);
 require("./app/routes/friend.routes")(app);
 require("./app/routes/post.routes")(app);
 require("./app/routes/comment.routes")(app);
+// require("./app/routes/notification.routes")(app);
 // require("./app/routes/userImage.routes")(app);
 
 app.listen(process.env.PORT || 8000, () => {
