# server/app/models/index.js
@@ -5,4 +5,5 @@ db.friend = require("./friend.model");
 db.userImages = require("./userImages.model");
 db.post = require("./post.model");
 db.comment = require("./comment.model");
+db.notification=require("./notification.model")
 module.exports = db;
